# knee-segment

./: .gitignore  README.md  SUMMARY.md  pyproject.toml  requirements.txt  train.py  visualize.py  visualize_preprocessing.py
results/comparison/: experiment_results.csv
src/: __init__.py
src/data/: __init__.py  dataloader.py  dataset.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  unet.py
src/preprocessing/: __init__.py  transforms.py
src/training/: __init__.py  experiment.py  trainer.py
src/utils/: __init__.py  logging.py  reproducibility.py
src/visualization/: __init__.py  visualize.py
